Add comment area

--- a/common.css
+++ b/common.css
@@ -17,3 +17,10 @@ body {
     border: 2px solid cyan;
     background-color: lightcyan;
 }
+
+.flex-column {
+    flex-direction: column;
+}
+.flex-row {
+    flex-direction: row;
+}
